@@ -3,90 +3,88 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.mskcc.cbio.pcviz</groupId>
+	<groupId>pathwaycommons</groupId>
 	<artifactId>pcviz</artifactId>
-	<packaging>war</packaging>
-	<version>2.2.0-SNAPSHOT</version>
-	<name>Pathway Commons Visualizer</name>
-	<url>https://github.com/PathwayCommons/pcviz</url>
+	<packaging>jar</packaging>
+	<version>2.3.0-SNAPSHOT</version>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.3.RELEASE</version>
+	</parent>
+
+	<name>Pathway Commons Network Visualizer</name>
+
+	<url>https://github.com/PathwayCommons/${project.name}</url>
+
+	<organization>
+		<name>Pathway Commons</name>
+		<url>http://www.pathwaycommons.org</url>
+	</organization>
+
+	<mailingLists>
+		<mailingList>
+			<name>Pathway Commons Help</name>
+			<post>pathway-commons-help@googlegroups.com</post>
+		</mailingList>
+	</mailingLists>
+
+	<licenses>
+		<license>
+			<name>LGPL 3.0 license</name>
+			<url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git://github.com/PathwayCommons/${project.name}.git</connection>
+		<developerConnection>scm:git:git@github.com:PathwayCommons/${project.name}.git</developerConnection>
+		<url>https://github.com/PathwayCommons/${project.name}</url>
+		<tag>HEAD</tag>
+	</scm>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/PathwayCommons/${project.name}/issues</url>
+	</issueManagement>
+
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/PathwayCommons/${project.name}</url>
+	</ciManagement>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.7</slf4j.version>
 		<spring.version>4.3.7.RELEASE</spring.version>
-		<paxtools.version>5.0.1-SNAPSHOT</paxtools.version>
+		<paxtools.version>5.1.0-SNAPSHOT</paxtools.version>
 		<cpath-client.version>7.0.0-SNAPSHOT</cpath-client.version>
 	</properties>
 
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<source>${java.version}</source>
-						<target>${java.version}</target>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 		<plugins>
 			<plugin>
-				<!-- Can run the exec-jar as: java -Xmx8g -jar target/pcviz.jar -httpPort=8080 -->
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
-				<!-- this is for making an executable jar with the tomcat built-in -->
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>create-exec-war</id>
 						<goals>
-							<goal>exec-war-only</goal>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
 						</goals>
-						<phase>package</phase>
-						<configuration>
-							<path>/pcviz</path>
-							<enableNaming>false</enableNaming>
-							<attachArtifactClassifier>exec-war</attachArtifactClassifier>
-							<attachArtifactClassifierType>jar</attachArtifactClassifierType>
-							<!-- An HTTP access log pattern ('combined', modified just to get actual client IP)
-							to match the Logstash 2.1x built-in %{COMBINEDAPACHELOG} Grok pattern -->
-							<accessLogValveFormat>%{X-Forwarded-For}i %l %u %t "%r" %s %b "%{Referer}i" "%{User-Agent}i"</accessLogValveFormat>
-							<finalName>pcviz.jar</finalName>
-						</configuration>
 					</execution>
 				</executions>
-				<!-- this is to debug run as: tomcat:run -->
-				<configuration>
-					<url>http://localhost:8080/manager</url>
-					<server>localhost</server>
-					<path>/pcviz</path>
-					<systemProperties>
-						<JAVA_OPTS>-Xms256m -Xmx8g -XX:MaxPermSize=256m</JAVA_OPTS>
-					</systemProperties>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.tomcat</groupId>
-						<artifactId>tomcat-catalina</artifactId>
-						<version>7.0.77</version>
-						<scope>runtime</scope>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
 
 	<repositories>
-		<repository>
-			<id>biopax.snapshots</id>
-			<name>BioPAX Repository at Sourceforge</name>
-			<url>http://biopax.sourceforge.net/m2repo/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
 		<repository>
 			<id>ossrh</id>
 			<name>OSSRH Repository</name>
@@ -95,19 +93,51 @@
 	</repositories>
 
 	<dependencies>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.data</groupId>-->
+			<!--<artifactId>spring-data-mongodb</artifactId>-->
+			<!--<version>1.10.3.RELEASE</version>-->
+		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-actuator</artifactId>-->
+		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.biopax.paxtools</groupId>
-			<artifactId>paxtools-core</artifactId>
+			<artifactId>pattern</artifactId>
 			<version>${paxtools.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.cbio</groupId>
-            <artifactId>causality</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
+		<dependency>
 			<groupId>org.biopax.paxtools</groupId>
-			<artifactId>pattern</artifactId>
+			<artifactId>paxtools-query</artifactId>
 			<version>${paxtools.version}</version>
 		</dependency>
 		<dependency>
@@ -115,91 +145,10 @@
 			<artifactId>cpath-client</artifactId>
 			<version>${cpath-client.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
-		<!-- Spring dependencies -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>net.sf.flexjson</groupId>
 			<artifactId>flexjson</artifactId>
 			<version>2.1</version>
-		</dependency>
-
-        <!-- ehcache -->
-        <dependency>
-            <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
-            <version>2.5.1</version>
-        </dependency>
-
-        <!-- AOP dependency -->
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>2.2</version>
-        </dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<!-- test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
